Cleaned up code, functionalized things

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"all_data.pickle\", \"rb\") as f:\n",
+    "with open(\"190311photobleaching.pickle\", \"rb\") as f:\n",
     "    d = pickle.load(f)"
    ]
   },
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "measurements, regionprops, labels, img = d[\n",
-    "    \"/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_0004.nd2\"\n",
+    "    \"/n/scratch2/jqs1/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_006.nd2\"\n",
     "]"
    ]
   },
@@ -108,17 +108,26 @@
     "rp_list = []\n",
     "rp_df = pd.DataFrame()\n",
     "for i in range(7):\n",
+    "    print(i)\n",
     "    measurements, regionprops, labels, img = d[\n",
-    "        \"/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_000\"\n",
+    "        \"/n/scratch2/jqs1/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_00\"\n",
     "        + str(i)\n",
     "        + \".nd2\"\n",
     "    ]\n",
     "    traces.append(measurements[\"mean\"][1:])\n",
     "    rp_list.append(regionprops)\n",
+    "    print(measurements[\"mean\"][1:].shape)\n",
     "traces = np.concatenate(traces)\n",
     "rp_df = pd.concat(rp_list, sort=False)\n",
     "rp_df.reset_index(inplace=True)\n",
-    "print(traces.shape)"
+    "print(traces.shape)\n",
+    "data = pd.DataFrame(traces)  # + np.random.normal(0,1,Gsamp.T.shape))\n",
+    "\n",
+    "bins = np.arange(data[0].min() - 1, data[0].max() + 1, 50)\n",
+    "data[\"bin\"] = pd.cut(data[0], bins=bins)\n",
+    "data = pd.concat([data, rp_df], axis=1, sort=False)\n",
+    "# rp_df['initial_intensity'] = df[0]\n",
+    "t_end = traces.shape[1]"
    ]
   },
   {
@@ -153,87 +162,103 @@
     "from matplotlib import cm\n",
     "from scipy.integrate import simps\n",
     "\n",
-    "# G = 10\n",
+    "\n",
+    "def filter_df(df, prop_dict):\n",
+    "    processed_df = df.copy()\n",
+    "    for prop in prop_dict:\n",
+    "        processed_df = processed_df[\n",
+    "            (processed_df[prop] > prop_dict[prop][0])\n",
+    "            & (processed_df[prop] < prop_dict[prop][1])\n",
+    "        ]\n",
+    "\n",
+    "    return processed_df\n",
     "\n",
     "\n",
-    "df = pd.DataFrame(traces)  # + np.random.normal(0,1,Gsamp.T.shape))\n",
-    "bins = np.arange(df[0].min() - 1, df[0].max() + 1, 70)\n",
-    "df[\"bin\"] = pd.cut(df[0], bins=bins)\n",
-    "rp_df[\"bin\"] = df[\"bin\"]\n",
-    "rp_df = rp_df[df[0] > 1000]\n",
-    "df = df[df[0] > 1000]\n",
-    "x_min, x_max, y_min, y_max = [500, 1500, 500, 1700]\n",
-    "df = df[\n",
-    "    (x_max > rp_df.centroid_x)\n",
-    "    & (rp_df.centroid_x > x_min)\n",
-    "    & (y_max > rp_df.centroid_y)\n",
-    "    & (rp_df.centroid_y > y_min)\n",
-    "]\n",
-    "# rp_df = rp_df[(1500 > rp_df.centroid_x) & (rp_df.centroid_x > 500) & (1500 > rp_df.centroid_y) & (rp_df.centroid_y > 500)]\n",
+    "def get_stats(df, thresh):\n",
+    "    p = df.iloc[:, :t_end].apply(lambda x: x / x[0], axis=1)\n",
+    "    p[\"bin\"] = df[\"bin\"]\n",
+    "    pbar = p.groupby(p[\"bin\"]).mean()[p.groupby(p[\"bin\"]).size() > thresh]\n",
+    "    mu = (\n",
+    "        df.iloc[:, :t_end]\n",
+    "        .groupby(df[\"bin\"])\n",
+    "        .mean()[df.groupby(df[\"bin\"]).size() > thresh]\n",
+    "    )\n",
+    "    sigma2 = (\n",
+    "        df.iloc[:, :t_end]\n",
+    "        .groupby(df[\"bin\"])\n",
+    "        .var(ddof=0)[df.groupby(df[\"bin\"]).size() > thresh]\n",
+    "    )\n",
     "\n",
-    "p = df.apply(lambda x: x[:-1:] / x[0], axis=1)\n",
-    "p[\"bin\"] = df[\"bin\"]\n",
+    "    return pbar, mu, sigma2\n",
     "\n",
-    "tau = 70\n",
-    "pbar = p.groupby(p[\"bin\"]).mean()[df.groupby(df[\"bin\"]).size() > tau]\n",
-    "mu = df.groupby(df[\"bin\"]).mean()[df.groupby(df[\"bin\"]).size() > tau]\n",
-    "sigma2 = df.groupby(df[\"bin\"]).var(ddof=0)[df.groupby(df[\"bin\"]).size() > tau]\n",
     "\n",
-    "y = sigma2.div(mu[0].values, axis=\"rows\")\n",
-    "x = pbar\n",
-    "r = y.values.flatten() / x.values.flatten()\n",
+    "def nu_int(pbar, mu, sigma, q=1):\n",
+    "    nu_dict = {}  # pd.Series()\n",
+    "    cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
+    "    y = sigma2.div(mu[0].values, axis=\"rows\")\n",
+    "    for name, group in pbar.groupby(\"bin\"):\n",
+    "        dp = pbar.loc[name].values\n",
+    "        dp = dp[x.loc[name].values > 1 - q]\n",
+    "        f = y.loc[name].values[x.loc[name].values > 1 - q]\n",
+    "        nu_dict[name] = cq * simps(f, dp)\n",
+    "    return pd.Series(nu_dict)\n",
     "\n",
-    "# linfit = np.polyfit(x.values.flatten(),y.values.flatten(),1)\n",
-    "# linfit_fn = np.poly1d(linfit)\n",
     "\n",
-    "plt.figure(figsize=(12, 8))\n",
-    "# plt.scatter(x,y)\n",
+    "def fluct_plot(pbar, mu, sigma2):\n",
+    "    plt.figure(figsize=(12, 8))\n",
     "\n",
-    "xfit = np.linspace(0, 0.25, 100)\n",
-    "nu_bar = np.round(np.mean(r[np.isfinite(r)]), 2)\n",
-    "# plt.plot(xfit,nu_bar*xfit,'-r',linewidth=6)\n",
+    "    cmap = cm.get_cmap(\"coolwarm\")\n",
     "\n",
-    "plt.title(\n",
-    "    r\"$\\nu = \\frac{\\hat{\\sigma}^2}{f_{max}\\hat{p}(1-\\hat{p})}$ =\" + str(nu_bar),\n",
-    "    fontsize=20,\n",
-    "    pad=20,\n",
-    ")\n",
-    "plt.xlabel(r\"$(1-\\hat{p})$\", fontsize=20)\n",
-    "plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
-    "bin_hist = df.groupby(df[\"bin\"]).size()\n",
-    "print(bin_hist[bin_hist.values > tau])\n",
-    "print(r\"mean ratio: \", np.mean(r[np.isfinite(r)]))\n",
-    "print(\"median ratio: \", np.median(r[np.isfinite(r)]))\n",
+    "    bin_hist = df.groupby(df[\"bin\"]).size()\n",
+    "    print(bin_hist[bin_hist.values > tau])\n",
     "\n",
-    "nu_int = []\n",
-    "nu_dict = {}\n",
-    "cmap = cm.get_cmap(\"coolwarm\")\n",
-    "imax = x.index[-1].left\n",
-    "imin = x.index[0].left\n",
-    "q = 1\n",
-    "cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
-    "# plt.vlines(q,0,3)\n",
+    "    y = sigma2.div(mu[0].values, axis=\"rows\")\n",
+    "    imax = pbar.index[-1].left\n",
+    "    imin = pbar.index[0].left\n",
+    "    q = 1 / 2\n",
+    "    cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
+    "    # plt.vlines(q,0,3)\n",
     "\n",
-    "for name, group in x.groupby(\"bin\"):\n",
-    "    #     nu_int.append(-6*simps(y.loc[name].values,x.loc[name].values))\n",
-    "    dp = x.loc[name].values\n",
+    "    for name, group in x.groupby(\"bin\"):\n",
+    "        #     nu_int.append(-6*simps(y.loc[name].values,x.loc[name].values))\n",
+    "        dp = x.loc[name].values\n",
     "\n",
-    "    dp = dp[x.loc[name].values > 1 - q]\n",
-    "    f = y.loc[name].values[x.loc[name].values > 1 - q]\n",
-    "    nu_int.append(cq * simps(f, dp))\n",
-    "    c = (name.left - imin) / (imax - imin)\n",
-    "    nu_dict[name] = nu_int[-1]\n",
-    "    plt.scatter(1 - x.loc[name].values, y.loc[name].values, color=cmap(c), label=name)\n",
-    "#     plt.legend()\n",
-    "print(nu_int, np.mean(nu_int))\n",
-    "plt.title(\n",
-    "    r\"$\\nu = \"\n",
-    "    + str(np.round(-cq))\n",
-    "    + r\"\\cdot \\int\\frac{\\hat{\\sigma}^2}{f_{max}}dp$ =\"\n",
-    "    + str(np.round(np.mean(nu_int), 2)),\n",
-    "    fontsize=20,\n",
-    "    pad=20,\n",
-    ")"
+    "        dp = dp[pbar.loc[name].values > 1 - q]\n",
+    "        f = y.loc[name].values[pbar.loc[name].values > 1 - q]\n",
+    "        c = (name.left - imin) / (imax - imin)\n",
+    "        plt.scatter(\n",
+    "            1 - pbar.loc[name].values, y.loc[name].values, color=cmap(c), label=name\n",
+    "        )\n",
+    "        plt.legend()\n",
+    "    plt.title(\n",
+    "        r\"$\\nu = \"\n",
+    "        + str(np.round(-cq))\n",
+    "        + r\"\\cdot \\int\\frac{\\hat{\\sigma}^2}{f_{max}}dp$ =\"\n",
+    "        + str(np.round(nu_df.mean(), 2)),\n",
+    "        fontsize=20,\n",
+    "        pad=20,\n",
+    "    )\n",
+    "    plt.xlabel(r\"$(1-\\hat{p})$\", fontsize=20)\n",
+    "    plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
+    "\n",
+    "\n",
+    "prop_dict = {\n",
+    "    \"centroid_x\": [300, 1000],\n",
+    "    \"centroid_y\": [750, 1500],\n",
+    "    \"area\": [30, 150],\n",
+    "    0: [2000, 10000],\n",
+    "}\n",
+    "# prop_dict = {'area': [30,150],\n",
+    "#              0: [2000, 10000]}\n",
+    "\n",
+    "df = filter_df(data, prop_dict)\n",
+    "pbar, mu, sigma2 = get_stats(df, 40)\n",
+    "\n",
+    "\n",
+    "nu_df = nu_int(pbar, mu, sigma2)\n",
+    "print(nu_df)\n",
+    "\n",
+    "fluct_plot(pbar, mu, sigma2)"
    ]
   },
   {
@@ -279,12 +304,12 @@
     "# ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
     "# rp_df = regionprops[regionprops.groupby(regionprops['bin']).size() > tau]\n",
-    "for name, group in rp_df.groupby(\"bin\"):\n",
+    "for name, group in df.groupby(\"bin\"):\n",
     "    if group.shape[0] > tau:\n",
     "        #         print(group.shape[0])\n",
     "        #         print(name,nu_dict[name] )\n",
-    "        #         c = (name.left - imin)/(imax - imin)\n",
-    "        c = (nu_dict[name] - min(nu_int)) / (max(nu_int) - min(nu_int))\n",
+    "        c = (name.left - imin) / (imax - imin)\n",
+    "        #         c = (nu_dict[name] - min(nu_int))/(max(nu_int) - min(nu_int))\n",
     "        z = name.left * np.ones(group.centroid_x.shape)\n",
     "        #     print(group.centroid_x)\n",
     "        plt.scatter(\n",
