--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
@@ -198,19 +198,21 @@
     "    y = sigma2.div(mu[0].values, axis=\"rows\")\n",
     "    for name, group in pbar.groupby(\"bin\"):\n",
     "        dp = pbar.loc[name].values\n",
-    "        dp = dp[x.loc[name].values > 1 - q]\n",
-    "        f = y.loc[name].values[x.loc[name].values > 1 - q]\n",
+    "        dp = dp[pbar.loc[name].values > 1 - q]\n",
+    "        f = y.loc[name].values[pbar.loc[name].values > 1 - q]\n",
     "        nu_dict[name] = cq * simps(f, dp)\n",
+    "\n",
     "    return pd.Series(nu_dict)\n",
     "\n",
     "\n",
-    "def fluct_plot(pbar, mu, sigma2):\n",
+    "def fluct_plot(pbar, mu, sigma2, thresh):\n",
+    "    hist_df = df.groupby(df[\"bin\"]).size()\n",
+    "    hist_df = hist_df[hist_df.values > thresh]\n",
+    "    print(hist_df)\n",
+    "\n",
     "    plt.figure(figsize=(12, 8))\n",
     "\n",
     "    cmap = cm.get_cmap(\"coolwarm\")\n",
-    "\n",
-    "    bin_hist = df.groupby(df[\"bin\"]).size()\n",
-    "    print(bin_hist[bin_hist.values > tau])\n",
     "\n",
     "    y = sigma2.div(mu[0].values, axis=\"rows\")\n",
     "    imax = pbar.index[-1].left\n",
@@ -219,10 +221,8 @@
     "    cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
     "    # plt.vlines(q,0,3)\n",
     "\n",
-    "    for name, group in x.groupby(\"bin\"):\n",
-    "        #     nu_int.append(-6*simps(y.loc[name].values,x.loc[name].values))\n",
-    "        dp = x.loc[name].values\n",
-    "\n",
+    "    for name, group in pbar.groupby(\"bin\"):\n",
+    "        dp = pbar.loc[name].values\n",
     "        dp = dp[pbar.loc[name].values > 1 - q]\n",
     "        f = y.loc[name].values[pbar.loc[name].values > 1 - q]\n",
     "        c = (name.left - imin) / (imax - imin)\n",
@@ -230,6 +230,7 @@
     "            1 - pbar.loc[name].values, y.loc[name].values, color=cmap(c), label=name\n",
     "        )\n",
     "        plt.legend()\n",
+    "\n",
     "    plt.title(\n",
     "        r\"$\\nu = \"\n",
     "        + str(np.round(-cq))\n",
@@ -242,6 +243,8 @@
     "    plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
     "\n",
     "\n",
+    "thresh = 40\n",
+    "\n",
     "prop_dict = {\n",
     "    \"centroid_x\": [300, 1000],\n",
     "    \"centroid_y\": [750, 1500],\n",
@@ -252,13 +255,13 @@
     "#              0: [2000, 10000]}\n",
     "\n",
     "df = filter_df(data, prop_dict)\n",
-    "pbar, mu, sigma2 = get_stats(df, 40)\n",
+    "pbar, mu, sigma2 = get_stats(df, thresh)\n",
     "\n",
     "\n",
     "nu_df = nu_int(pbar, mu, sigma2)\n",
     "print(nu_df)\n",
     "\n",
-    "fluct_plot(pbar, mu, sigma2)"
+    "fluct_plot(pbar, mu, sigma2, thresh)"
    ]
   },
   {
@@ -302,30 +305,20 @@
     "cmap = cm.get_cmap(\"coolwarm\")\n",
     "fig = plt.figure(figsize=(12, 8))\n",
     "# ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "# rp_df = regionprops[regionprops.groupby(regionprops['bin']).size() > tau]\n",
+    "imax = pbar.index[-1].left\n",
+    "imin = pbar.index[0].left\n",
     "for name, group in df.groupby(\"bin\"):\n",
-    "    if group.shape[0] > tau:\n",
-    "        #         print(group.shape[0])\n",
-    "        #         print(name,nu_dict[name] )\n",
+    "    if group.shape[0] > thresh:\n",
     "        c = (name.left - imin) / (imax - imin)\n",
     "        #         c = (nu_dict[name] - min(nu_int))/(max(nu_int) - min(nu_int))\n",
     "        z = name.left * np.ones(group.centroid_x.shape)\n",
-    "        #     print(group.centroid_x)\n",
     "        plt.scatter(\n",
-    "            group.centroid_x, group.centroid_y, color=cmap(c), label=nu_dict[name]\n",
+    "            group.centroid_x, group.centroid_y, color=cmap(c), label=nu_df[name]\n",
     "        )\n",
-    "#         ax.scatter(group.centroid_x, group.centroid_y,z, c=cmap(c))\n",
-    "\n",
-    "\n",
-    "#         if nu_dict[name] > 17.5:\n",
-    "#             plt.scatter(group.centroid_x,group.centroid_y, lcolor='red',label=nu_dict[name])\n",
-    "#         if 17.5 > nu_dict[name] > 12.5:\n",
-    "#             plt.scatter(group.centroid_x,group.centroid_y, color='black',label=nu_dict[name])\n",
-    "#         if  nu_dict[name] < 12.5:\n",
-    "#             plt.scatter(group.centroid_x,group.centroid_y, color='blue',label=nu_dict[name])\n",
-    "\n",
-    "# plt.legend()"
+    "        plt.xlim(data.centroid_x.min(), data.centroid_x.max())\n",
+    "        plt.ylim(data.centroid_y.min(), data.centroid_y.max())\n",
+    "    else:\n",
+    "        plt.scatter(group.centroid_x, group.centroid_y, color=\"k\", alpha=0.1)"
    ]
   },
   {
