--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
@@ -36,7 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# with open('190311photobleaching.pickle', 'rb') as f:\n",
     "with open(\"all_data.pickle\", \"rb\") as f:\n",
+    "\n",
     "    d = pickle.load(f)"
    ]
   },
@@ -124,7 +126,7 @@
     "print(traces.shape)\n",
     "data = pd.DataFrame(traces)  # + np.random.normal(0,1,Gsamp.T.shape))\n",
     "\n",
-    "bins = np.arange(data[0].min() - 1, data[0].max() + 1, 70)\n",
+    "bins = np.arange(data[0].min() - 1, data[0].max() + 1, 50)\n",
     "data[\"bin\"] = pd.cut(data[0], bins=bins)\n",
     "data = pd.concat([data, rp_df], axis=1, sort=False)\n",
     "# rp_df['initial_intensity'] = df[0]\n",
@@ -239,11 +241,11 @@
     "    plt.ylabel(r\"$\\frac{\\hat{\\sigma}^2}{f_{max}}$\", fontsize=20)\n",
     "\n",
     "\n",
-    "thresh = 60\n",
+    "thresh = 70\n",
     "\n",
     "prop_dict = {\n",
-    "    \"centroid_x\": [300, 1500],\n",
-    "    \"centroid_y\": [300, 1700],\n",
+    "    \"centroid_x\": [200, 1600],\n",
+    "    \"centroid_y\": [500, 1750],\n",
     "    \"area\": [30, 150],\n",
     "    0: [2000, 10000],\n",
     "}\n",
@@ -299,7 +301,7 @@
     "cmap = cm.get_cmap(\"coolwarm\")\n",
     "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(24, 12))\n",
     "gridfig, gridaxs = plt.subplots(\n",
-    "    nrows=int(np.ceil(nu_df.size / 4)), ncols=4, figsize=(24, 36)\n",
+    "    nrows=int(np.ceil(nu_df.size / 4)), ncols=4, figsize=(24, 30)\n",
     ")\n",
     "imax = pbar.index[-1].left\n",
     "imin = pbar.index[0].left\n",
