--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190320 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190320 Segmentation.ipynb
@@ -47,279 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd22 = nd2reader.ND2Reader(\"/home/jqs1/scratch/fidelity/all/180405_txnerr002.nd2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b\"Dimensions: T(32) x XY(1040) x \\xce\\xbb(2)\".decode(\"utf8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2._parser._calculate_image_group_number(3, 2, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd22._parser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2 = nd2reader.ND2Reader(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = nd2._parser._raw_metadata._parse_dimension_text().decode(\"utf8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd22._parser._calculate_image_group_number(2, 3, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s2 = \"Dimensions: T(32) x XY(1040) x λ(2)\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.product(np.array(list(dims.values())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dims"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "key = {\"T\": 2, \"XY\": 3, \"λ\": 0}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2 * 1040 + 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2._parser._raw_metadata.image_attributes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_nd2_frame(\n",
-    "    \"/home/jqs1/scratch/fidelity/190311/190311_205a_10ms_laser10pct_000.nd2\", 0, 0, 0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_nd2_frame(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 111\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "f = nd2.get_frame(667)\n",
-    "plt.imshow(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "f = get_nd2_frame(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 667\n",
-    ")\n",
-    "plt.imshow(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2 = get_nd2_reader(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "f = nd2.get_frame_2D(v=0, c=0, t=667)\n",
-    "plt.imshow(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2.metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "f = nd2.get_frame_2D(v=0, c=0, t=666, z=0)\n",
-    "plt.imshow(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs = [\n",
-    "    get_nd2_frame(\n",
-    "        \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, t\n",
-    "    )\n",
-    "    for t in range(995, 999)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.HoloMap({t: RevImage(img) for t, img in enumerate(fs)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f1 = get_nd2_frame(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 0\n",
-    ")\n",
-    "f2 = get_nd2_frame(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 999\n",
-    ")\n",
-    "f1 = f1 / np.nanmax(f1)\n",
-    "f2 = f2 / np.nanmax(f2)\n",
-    "z = f1 - f2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%output size=250\n",
-    "RevImage(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.rcParams[\"figure.figsize\"] = (8, 8)\n",
     "hv.extension(\"bokeh\")"
    ]
   },
@@ -453,12 +181,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = bf[:600, :600]\n",
-    "img = invert(img)\n",
-    "# img = skimage.transform.pyramid_expand(img, upscale=2, multichannel=False)\n",
-    "mask = img > skimage.filters.threshold_otsu(img)\n",
-    "img_labels = skimage.morphology.label(mask)\n",
-    "img = normalize_componentwise(img, img_labels)"
+    "# img = bf[:600,:600]\n",
+    "# img = invert(img)\n",
+    "# #img = skimage.transform.pyramid_expand(img, upscale=2, multichannel=False)\n",
+    "# mask = img > skimage.filters.threshold_otsu(img)\n",
+    "# img_labels = skimage.morphology.label(mask)\n",
+    "# img = normalize_componentwise(img, img_labels)"
    ]
   },
   {
@@ -501,7 +229,6 @@
     "    reader = get_nd2_reader(filename, memmap=memmap)\n",
     "    if not isinstance(channel, Integral):\n",
     "        channel = reader.metadata[\"channels\"].index(channel)\n",
-    "    print(\">\", dict(v=position, c=channel, t=t, memmap=memmap))\n",
     "    ary = reader.get_frame_2D(v=position, c=channel, t=t, memmap=memmap)\n",
     "    return ary\n",
     "\n",
@@ -514,7 +241,7 @@
     "\n",
     "# TODO: changed argument order\n",
     "def map_over_labels(func, label_image, intensity_image):\n",
-    "    # assumes are consecutive integers 1,...,N\n",
+    "    # assumes are consecutive integers 0,...,N\n",
     "    groups = numpy_indexed.group_by(\n",
     "        label_image.ravel(), intensity_image.ravel(), reduction=func\n",
     "    )\n",
@@ -544,6 +271,36 @@
     "        for t in range(nd2.sizes[\"t\"])\n",
     "    ]\n",
     "    return frames\n",
+    "\n",
+    "\n",
+    "def short_circuit_none(func, *args, **kwargs):\n",
+    "    if args[-1] is None:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return func(*args, **kwargs)\n",
+    "\n",
+    "\n",
+    "# TODO: unused\n",
+    "def trim_nones(ary):\n",
+    "    length = len(ary)\n",
+    "    for idx, elem in enumerate(reversed(ary)):\n",
+    "        if elem is not None:\n",
+    "            length = idx\n",
+    "            break\n",
+    "    return ary[: len(ary) - length]\n",
+    "\n",
+    "\n",
+    "def none_to_nans(iterable):\n",
+    "    iterable = list(iterable)\n",
+    "    non_none = None\n",
+    "    for elem in iterable:\n",
+    "        if elem is not None:\n",
+    "            non_none = elem\n",
+    "            break\n",
+    "    if non_none is None:\n",
+    "        return None\n",
+    "    replacement = np.full(np.shape(non_none), np.nan)\n",
+    "    return [elem if elem is not None else replacement for elem in iterable]\n",
     "\n",
     "\n",
     "def process_file(\n",
@@ -594,25 +351,29 @@
     "            )\n",
     "        sandwich_traces = {\n",
     "            col: client.submit(\n",
-    "                np.transpose,\n",
+    "                compose(np.transpose, none_to_nans),\n",
     "                [\n",
-    "                    client.submit(map_over_labels, func, labels, frame)\n",
+    "                    client.submit(\n",
+    "                        short_circuit_none, map_over_labels, func, labels, frame\n",
+    "                    )\n",
     "                    for frame in sandwich_frames\n",
     "                ],\n",
     "            )\n",
     "            for col, func in col_to_funcs.items()\n",
     "        }\n",
     "        regionprops = client.submit(get_regionprops, labels, regionprops_frame)\n",
+    "        # traces = {col: client.submit(np.transpose, client.map(partial(map_over_labels, func, labels),\n",
+    "        #                                                      photobleaching_frames[time_slice]))\n",
     "        traces = {\n",
     "            col: client.submit(\n",
-    "                np.transpose,\n",
+    "                compose(np.transpose, none_to_nans),\n",
     "                [\n",
-    "                    client.submit(map_over_labels, func, labels, frame)\n",
+    "                    client.submit(\n",
+    "                        short_circuit_none, map_over_labels, func, labels, frame\n",
+    "                    )\n",
     "                    for frame in photobleaching_frames[time_slice]\n",
     "                ],\n",
     "            )\n",
-    "            # traces = {col: client.submit(np.transpose, client.map(partial(map_over_labels, func, labels),\n",
-    "            #                                                      photobleaching_frames[time_slice]))\n",
     "            for col, func in col_to_funcs.items()\n",
     "        }\n",
     "        data[position] = {\n",
@@ -680,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(10)"
+    "cluster.scale(40)"
    ]
   },
   {
@@ -754,9 +515,7 @@
     "%%time\n",
     "data = {}\n",
     "for photobleaching_filename in fluorescence_filenames[:1]:\n",
-    "    data[photobleaching_filename] = process_file(\n",
-    "        client, funcs, photobleaching_filename, time_slice=slice(0, 10)\n",
-    "    )\n",
+    "    data[photobleaching_filename] = process_file(client, funcs, photobleaching_filename)\n",
     "\n",
     "for photobleaching_filename in phase_filenames[:0]:\n",
     "    segmentation_filename = photobleaching_filename.replace(\"_0001.nd2\", \".nd2\")\n",
@@ -787,8 +546,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.restart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phase_filenames[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
-    "a = client.gather(data)"
+    "z2 = client.gather(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(\n",
+    "    z2[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][8][\n",
+    "        \"traces\"\n",
+    "    ][\"median\"].T\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
+    "    \"mean\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
+    "    \"mean\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(\n",
+    "    z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][8][\"traces\"][\n",
+    "        \"mean\"\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\n",
+    "    \"regionprops\"\n",
+    "].hist(\"area\", bins=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
+    "    \"mean\"\n",
+    "]"
    ]
   },
   {
@@ -828,17 +684,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(500):\n",
-    "    print(\">\", i)\n",
-    "    ary[i, 0, 0].compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "a = ary[:500].mean(axis=0).compute()"
    ]
@@ -859,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RevImage(b)"
+    "plt.imshow(a)"
    ]
   },
   {
@@ -868,54 +713,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%output size=150\n",
-    "(\n",
-    "    RevImage(\n",
-    "        get_nd2_frame(\n",
-    "            \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 0\n",
-    "        )\n",
-    "    )\n",
-    "    + RevImage(\n",
-    "        get_nd2_frame(\n",
-    "            \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 1\n",
-    "        )\n",
-    "    )\n",
-    "    + RevImage(\n",
-    "        get_nd2_frame(\n",
-    "            \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\",\n",
-    "            0,\n",
-    "            0,\n",
-    "            500,\n",
-    "        )\n",
-    "    ).redim(z=\"z3\")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%output size=250\n",
-    "RevImage(\n",
-    "    get_nd2_frame(\n",
-    "        \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 0\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename = \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_100pct_laser.nd2\"\n",
-    "pos = 1\n",
-    "RevImage(a[filename][pos][\"labels\"]) + RevImage(\n",
-    "    a[filename][pos][\"segmentation_frame\"]\n",
-    ").redim(z=\"z2\")"
+    "import matplotlib as mpl\n",
+    "\n",
+    "mpl.get_configdir()"
    ]
   },
   {
@@ -1034,6 +834,17 @@
    "outputs": [],
    "source": [
     "b[1].hist(\"area\", bins=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traces = z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\n",
+    "    \"traces\"\n",
+    "][\"mean\"]"
    ]
   },
   {
